Alteração renomeado para pasta assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>TecBlog o seu blog de tecnologia</title>
 		<meta charset="utf-8">
 
-		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="assets/estilo.css">
 	</head>
 	<body>
 
